5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/226/users/4477/executions/1618_2931.log
== TEST (2019-04-02 11:33:19) 
-- CODE:
from math import *

altura_h = float(input("Determina a altuta em Metros: "))
velocidade = float(input("Determine a velocidade em m/s"))

v = (2 * 9,81 * altura_h) ** 0.5
2**0.5
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 4, in <module>
    velocidade = float(input())
EOFError: EOF when reading a line
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-02 11:33:30) 
-- CODE:
from math import *

altura_h = float(input("Determina a altuta em Metros: "))

v = (2 * 9,81 * altura_h) ** 0.5
2**0.5
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 5, in <module>
    v = (2 * 9,81 * altura_h) ** 0.5
TypeError: unsupported operand type(s) for ** or pow(): 'tuple' and 'float'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-02 11:33:57) 
-- CODE:
from math import *

altura_h = float(input("Determina a altuta em Metros: "))

v = ((2 * 9,81 * altura_h) ** 0.5)
2**0.5
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 5, in <module>
    v = ((2 * 9,81 * altura_h) ** 0.5)
TypeError: unsupported operand type(s) for ** or pow(): 'tuple' and 'float'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-02 11:34:12) 
-- CODE:
from math import *

altura_h = float(input("Determina a altuta em Metros: "))

v = (((2 * 9,81) * altura_h) ** 0.5)
2**0.5
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 5, in <module>
    v = (((2 * 9,81) * altura_h) ** 0.5)
TypeError: can't multiply sequence by non-int of type 'float'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-02 11:35:59) 
-- CODE:
from math import *

altura_h = float(input("Determina a altuta em Metros: "))

v = ((2 * 9,81) * altura_h)
2**0.5
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 5, in <module>
    v = ((2 * 9,81) * altura_h)
TypeError: can't multiply sequence by non-int of type 'float'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-02 11:36:12) 
-- CODE:
from math import *

altura_h = float(input("Determina a altuta em Metros: "))

v = sqtr((2 * 9,81) * altura_h)
2**0.5
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 5, in <module>
    v = sqtr((2 * 9,81) * altura_h)
NameError: name 'sqtr' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-02 11:36:21) 
-- CODE:
from math import *

altura_h = float(input("Determina a altuta em Metros: "))

v = sq((2 * 9,81) * altura_h)
2**0.5
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 5, in <module>
    v = sq((2 * 9,81) * altura_h)
NameError: name 'sq' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-02 11:36:21) 
-- CODE:
from math import *

altura_h = float(input("Determina a altuta em Metros: "))

v = sq((2 * 9,81) * altura_h)
2**0.5
-- EXECUTION TIME:
0.144355
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1618/2931/main.py", line 5, in <module>
    v = sq((2 * 9,81) * altura_h)
NameError: name 'sq' is not defined

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-02 11:36:26) 
-- CODE:
from math import *

altura_h = float(input("Determina a altuta em Metros: "))

v = sqrt((2 * 9,81) * altura_h)
2**0.5
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 5, in <module>
    v = sqrt((2 * 9,81) * altura_h)
TypeError: can't multiply sequence by non-int of type 'float'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-02 11:37:48) 
-- CODE:
from math import *

altura_h = float(input("Determina a altuta em Metros: "))

v = (2 * 9,81 * altura_h)
2**0.5
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 5, in <module>
    v = sqrt((2 * 9,81) * altura_h)
TypeError: can't multiply sequence by non-int of type 'float'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-02 11:38:01) 
-- CODE:
from math import *

altura_h = float(input("Determina a altuta em Metros: "))

v = (2 * 9,81 * altura_h)
print(v)
-- OUTPUT:
(18, 12376.800000000001)
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-02 11:38:18) 
-- CODE:
from math import *

altura_h = float(input("Determina a altuta em Metros: "))

v = sqrt(2 * 9,81 * altura_h)
print(v)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 5, in <module>
    v = sqrt(2 * 9,81 * altura_h)
TypeError: sqrt() takes exactly one argument (2 given)
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-02 11:38:25) 
-- CODE:
from math import *

altura_h = float(input("Determina a altuta em Metros: "))

v = sq(2 * 9,81 * altura_h)
print(v)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 5, in <module>
    v = sq(2 * 9,81 * altura_h)
NameError: name 'sq' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-02 11:38:25) 
-- CODE:
from math import *

altura_h = float(input("Determina a altuta em Metros: "))

v = sq(2 * 9,81 * altura_h)
print(v)
-- EXECUTION TIME:
0.161617
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1618/2931/main.py", line 5, in <module>
    v = sq(2 * 9,81 * altura_h)
NameError: name 'sq' is not defined

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-02 11:38:31) 
-- CODE:
from math import *

altura_h = float(input("Determina a altuta em Metros: "))

v = sqtr(2 * 9,81 * altura_h)
print(v)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 5, in <module>
    v = sqtr(2 * 9,81 * altura_h)
NameError: name 'sqtr' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-02 11:38:33) 
-- CODE:
from math import *

altura_h = float(input("Determina a altuta em Metros: "))

v = sqtr(2 * 9,81 * altura_h)
print(v)
-- EXECUTION TIME:
0.151436
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1618/2931/main.py", line 5, in <module>
    v = sqtr(2 * 9,81 * altura_h)
NameError: name 'sqtr' is not defined

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-02 11:38:34) 
-- CODE:
from math import *

altura_h = float(input("Determina a altuta em Metros: "))

v = sqtr(2 * 9,81 * altura_h)
print(v)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 5, in <module>
    v = sqtr(2 * 9,81 * altura_h)
NameError: name 'sqtr' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-02 11:39:21) 
-- CODE:
from math import *

altura_h = float(input("Determina a altuta em Metros: "))

v = (2 * 9.81 * altura_h)
print(v)
-- OUTPUT:
2997.936
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-02 11:39:29) 
-- CODE:
from math import *

altura_h = float(input("Determina a altuta em Metros: "))

v = sqrt(2 * 9.81 * altura_h)
print(v)
-- OUTPUT:
54.753410852658305
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-02 11:39:34) 
-- CODE:
from math import *

altura_h = float(input("Determina a altuta em Metros: "))

v = sqrt(2 * 9.81 * altura_h)
print(v)
-- EXECUTION TIME:
0.199005
-- TEST CASE 1:
---- input:
152.8
---- correct output:
54.753410852658305
---- user output:
54.753410852658305
-- TEST CASE 2:
---- input:
325.3
---- correct output:
79.8898366502273
---- user output:
79.8898366502273
-- TEST CASE 3:
---- input:
12.7
---- correct output:
15.785246276190943
---- user output:
15.785246276190943
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
